--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,15 @@ dist
 server/public
 vite.config.ts.*
 *.tar.gz
+
+# Environment variables
+.env
+.env*.local
+.env.local.*
+# .env.development (can be version controlled for build-time defaults)
+# .env.production (can be version controlled for build-time defaults)
+.env.development.local
+.env.production.local
+
+# Vite build output
+dist-ssr
