--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.2.2",
     "@testing-library/user-event": "^14.5.2",
+    "@types/express": "^5.0.1",
     "@types/node": "^20.11.28",
     "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.22",
