--- a/fly.toml
+++ b/fly.toml
@@ -1,24 +1,26 @@
-# fly.toml app configuration file generated for orbitai
+# fly.toml app configuration file generated for orbit-api-bold-glitter-8422 on 2025-05-16T10:34:15-04:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "orbitai" # Name of your app on Fly.io
-primary_region = "iad"  # Example region: Ashburn, VA. Choose one closer to your users: https://fly.io/docs/reference/regions/
+app = 'orbit-api-bold-glitter-8422'
+primary_region = 'iad'
 
 [build]
-  dockerfile = "Dockerfile" # Tells Fly to use the Dockerfile in your project root
+  dockerfile = './Dockerfile'
+
+[deploy]
+  release_command = "npx prisma migrate deploy --schema=./prisma/schema.prisma"
 
 [http_service]
-  internal_port = 5001 # The port your app internally listens on (it uses process.env.PORT || 5001)
+  internal_port = 8080
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
-  min_machines_running = 0 # Good for free tier; set to 1 for always-on (requires paid plan)
-  processes = ["app"] # Default process group
+  min_machines_running = 0
+  processes = ['app']
 
-# Optional: Define machine resources. Defaults are usually fine to start.
-# [[vm]]
-#   cpu_kind = "shared"
-#   cpus = 1
-#   memory_mb = 256 # Smallest available; monitor and increase if needed.
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
