--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@
 DATABASE_URL=""
 # OPENAI_API_KEY="your_openai_api_key_here"
 OPENAI_API_KEY=""
+
+# For client-side API calls during local development (points to your local server, e.g., http://localhost:5001)
+# Ensure this matches the port your local server runs on.
+NEXT_PUBLIC_API_URL=""
