--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development dotenv -e .env -- node --import tsx server/index.ts",
-    "build": "vite build && npx esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist --external:vite --define:__IS_DEV__=false",
+    "dev": "cross-env NODE_ENV=development dotenv -e .env -- tsx watch --ignore \"./vite.config.ts.timestamp-*.mjs\" server/dev.ts",
+    "build": "vite build && npx esbuild server/index.ts --platform=node --bundle --outfile=dist/index.js --format=esm --define:process.env.NODE_ENV='\"production\"' --packages=external",
     "start": "NODE_ENV=production node dist/index.js",
+    "build:vercel": "vite build",
     "check": "tsc",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -39,7 +40,8 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
-    "@prisma/client": "^6.8.1",
+    "@neondatabase/serverless": "^1.0.0",
+    "@prisma/client": "^6.8.2",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-aspect-ratio": "^1.1.3",
@@ -81,6 +83,7 @@
     "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "drizzle-orm": "^0.43.1",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
@@ -116,13 +119,13 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.2.2",
     "@testing-library/user-event": "^14.5.2",
-    "@types/express": "^5.0.1",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.11.28",
     "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
     "dotenv-cli": "^7.3.0",
@@ -133,6 +136,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "jsdom": "^24.0.0",
     "postcss": "^8.4.35",
+    "prisma": "^6.8.2",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
